...
    Scaffold(
        modifier = modifier.statusBarsPadding().nestedScroll(scroll),
        contentWindowInsets = contentWindowInsets,
        containerColor = MaterialTheme.colorScheme.background,
        topBar = {
            Layout(
                modifier = Modifier.clipToBounds().testTag("scrolling-header"),
                content = { Box(Modifier.onSizeChanged { headerHeight = it.height.toFloat(); offset = offset.coerceIn(-headerHeight, 0f) }) { topBar() } }
            ) { measurables, constraints ->
                val header = measurables.single().measure(constraints.copy(minHeight = 0))
                layout(header.width, (header.height + offset).roundToInt().coerceAtLeast(0)) {
                    header.placeRelative(0, offset.roundToInt())
                }
...
